# comp_graphics

./: CMakeLists.txt  README.md  flame.mov
include/glad/: glad.h
src/: glad.c  main.cpp  pipeline.cpp
